# axiam-python-sdk

./: .gitignore  CHANGELOG.md  CONTRACT.md  README.md  axiam_sdk.html  index.html  pyproject.toml  search.js
.github/: dependabot.yml
.github/workflows/: coverage.yml  docs-publish.yml  sdk-ci-python.yml
axiam_sdk/: __init__.py  amqp.html  django.html  fastapi.html
axiam_sdk/django/: decorators.html  middleware.html
examples/: amqp_consumer.py  django_middleware.py  fastapi_dependency.py  grpc_checkaccess.py  login_mfa.py  rest_authz.py
scripts/: gen_grpc.sh
src/axiam_sdk/: __init__.py  _async_client.py  _client.py  _errors.py  _jwks.py  _models.py  _session.py  _tls_identity.py
src/axiam_sdk/amqp/: __init__.py  _consumer.py  _hmac.py  _replay.py
src/axiam_sdk/django/: __init__.py  decorators.py  middleware.py
src/axiam_sdk/fastapi/: __init__.py
src/axiam_sdk/grpc/: __init__.py  _interceptor.py  _tls.py  client.py
src/axiam_sdk/token/: __init__.py  refresh_guard.py
tests/: conftest.py  test_amqp_consume.py  test_amqp_consumer.py  test_amqp_hmac.py  test_amqp_v2_replay.py  test_async_client_extra.py  test_client_extra.py  test_client_login.py  test_django_decorators.py  test_django_middleware.py  test_error_redaction.py  test_errors_extra.py  test_fastapi_dependency.py  test_fastapi_require_access.py  test_grpc_client.py  test_grpc_interceptor.py  test_jwks.py  test_middleware_tenant.py  test_mtls_client_cert.py  test_refresh_guard_extra.py  test_replay_unit.py  test_session_cookies.py  test_single_flight.py
tests/fixtures/: amqp_hmac_vectors.json
