[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axiam-sdk"
version = "0.0.0"
description = "Official Python client SDK for AXIAM IAM"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["axiam", "iam", "auth", "authentication", "authorization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/ilpanich/axiam"
Documentation = "https://docs.axiam.io/sdks/python"
