[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiam-sdk"
version = "1.0.0a16"
description = "Official Python client SDK for AXIAM IAM"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["axiam", "iam", "auth", "authentication", "authorization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "grpcio>=1.78,<1.83",
    "aio-pika==9.6.*",
    "pydantic>=2",
    "PyJWT>=2.13",
]

[project.optional-dependencies]
fastapi = ["fastapi"]
django = ["django"]
dev = [
    "grpcio-tools>=1.78,<1.83",
    "mypy",
    "ruff",
    "interrogate",
    "build",
    "twine",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[project.urls]
Repository = "https://github.com/ilpanich/axiam-python-sdk"
Documentation = "https://ilpanich.github.io/axiam-python-sdk/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axiam_sdk = ["py.typed", "grpc/gen/*.py", "grpc/gen/*.pyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
# grpc/gen is protoc output — already excluded from ruff (extend-exclude) and
# mypy (exclude) below. Measuring generated stubs dilutes the ratio without
# saying anything about the SDK's own tests.
omit = ["*/grpc/gen/*"]

[tool.coverage.report]
# Regression gate: fail if coverage drops below the floor. Set below the
# current level (~98% with generated stubs excluded) so it never false-fails;
# ratchet upward as coverage rises.
fail_under = 97

[tool.mypy]
strict = true
files = ["src"]

# Generated gRPC stubs (D-04, "DO NOT EDIT!" header) are out of every
# plan's file-modification scope and grpc_tools.protoc does not emit a
# fully-typed _grpc.py counterpart to its .pyi message stubs — exempt the
# generated package from --strict so downstream typed modules (e.g.
# grpc/client.py, 19-04) that import it are not blocked by upstream
# codegen gaps outside this SDK's control.
[[tool.mypy.overrides]]
module = "axiam_sdk.grpc.gen.*"
ignore_errors = true

# Django ships no py.typed marker / inline type stubs (django-stubs is a
# separate, heavier package requiring its own mypy plugin configuration,
# out of this plan's scope). Suppress the resulting import-untyped
# diagnostic for axiam_sdk.django.middleware's Django imports only —
# app code that does not import Django is unaffected.
[[tool.mypy.overrides]]
module = ["django.*"]
ignore_missing_imports = true

# grpcio ships no py.typed marker / inline type stubs (the third-party
# `types-grpcio` package is incomplete for grpc.aio and would introduce its
# own strict-mode gaps). Suppress import-untyped for the grpc runtime imports
# in the gRPC client/interceptor/TLS modules — the SDK's own code around them
# stays fully typed.
[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

# With grpc untyped (above), grpc.UnaryUnaryClientInterceptor /
# grpc.aio.UnaryUnaryClientInterceptor resolve to Any; the two concrete
# interceptor classes must subclass them. Permit subclassing-Any for this
# module only (the base classes are external, not ours to type).
[[tool.mypy.overrides]]
module = "axiam_sdk.grpc._interceptor"
disallow_subclassing_any = false

[tool.ruff]
line-length = 100
target-version = "py310"
# Generated gRPC stubs (D-04, "DO NOT EDIT!" header) are out of every plan's
# file-modification scope, same rationale as the [[tool.mypy.overrides]]
# exemption for axiam_sdk.grpc.gen.* above — grpc_tools.protoc's own
# codegen output predates ruff's modern style conventions (e.g. explicit
# `object` base classes) and is not something this SDK's own lint gate
# should enforce on upstream-generated code.
extend-exclude = ["src/axiam_sdk/grpc/gen"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.interrogate]
fail-under = 100
verbose = 2
# Generated gRPC stubs (D-04, "DO NOT EDIT!" header) are out of every plan's
# file-modification scope, same rationale as the [tool.ruff] extend-exclude
# and [[tool.mypy.overrides]] exemptions for axiam_sdk.grpc.gen.* above —
# grpc_tools.protoc's own codegen output is not something this SDK's own
# docstring-coverage gate should enforce on upstream-generated code.
exclude = ["src/axiam_sdk/grpc/gen", "build"]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
